--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -6,11 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Jesse Posner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="../../public/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="../../public/css/main.css" />
+		<link rel="stylesheet" href="../../public/css/custom.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="../../public/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="../../public/css/ie8.css" /><![endif]-->
 	</head>
@@ -22,8 +23,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">Projects</a></li>
+							<li><a href="#two">Who am I</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -36,9 +37,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Jesse Posner</h1>
+							<p>Software Engineer in San Francisco</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -48,37 +48,39 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="../../public/images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="../../public/images/launchpad.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
+									<h2>LaunchPad</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Live</a></li>
+										<li><a href="#" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="../../public/images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="../../public/images/spaceinvaders.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
+									<h2>Space Invaders</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Live</a></li>
+										<li><a href="#" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="../../public/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="../../public/images/railslite.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h2>Rails Lite</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
@@ -88,7 +90,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
+							<h2>Who am I</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
 								<section>
@@ -122,9 +124,23 @@
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
+							<div class="features">
+								<section>
+									<h1>Languages and Technologies</h1>
+									<ul class="tech-list">
+						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>Ruby</h3></li>
+						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>Rails</h3></li>
+						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>JavaScript</h3></li>
+						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>React</h3></li>
+						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>Flux</h3></li>
+										<li><img src="http://www.deanhu.com/images/rails.png"><h3>jQuery</h3></li>
+										<li><img src="http://www.deanhu.com/images/rails.png"><h3>PostgreSQL</h3></li>
+										<li><img src="http://www.deanhu.com/images/rails.png"><h3>HTML5</h3></li>
+										<li><img src="http://www.deanhu.com/images/rails.png"><h3>CSS3</h3></li>
+										<li><img src="http://www.deanhu.com/images/rails.png"><h3>Git</h3></li>
+						      </ul>
+								</section>
+							</div>
 						</div>
 					</section>
 
@@ -135,7 +151,7 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="MAILTO:jesse.posner@gmail.com" enctype="text/plain">
 										<div class="field half first">
 											<label for="name">Name</label>
 											<input type="text" name="name" id="name" />
@@ -156,27 +172,19 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">jesse.posner@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(888) 745-2375</span>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://twitter.com/jesseposner" class="fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://github.com/jesseposner" class="fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/jesseposner" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -186,15 +194,6 @@
 					</section>
 
 			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
 
 		<!-- Scripts -->
 			<script src="../../public/js/jquery.min.js"></script>
