--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -9,6 +9,7 @@
 		<title>Jesse Posner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="../../public/images/favicon-generic-32.png" />
 		<!--[if lte IE 8]><script src="../../public/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="../../public/css/main.css" />
 		<link rel="stylesheet" href="../../public/css/custom.css" />
@@ -125,19 +126,19 @@
 								</section>
 							</div>
 							<div class="features">
-								<section>
+								<section class="tech-section">
 									<h1>Languages and Technologies</h1>
 									<ul class="tech-list">
-						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>Ruby</h3></li>
-						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>Rails</h3></li>
-						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>JavaScript</h3></li>
-						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>React</h3></li>
-						        <li><img src="http://www.deanhu.com/images/rails.png"><h3>Flux</h3></li>
-										<li><img src="http://www.deanhu.com/images/rails.png"><h3>jQuery</h3></li>
-										<li><img src="http://www.deanhu.com/images/rails.png"><h3>PostgreSQL</h3></li>
-										<li><img src="http://www.deanhu.com/images/rails.png"><h3>HTML5</h3></li>
-										<li><img src="http://www.deanhu.com/images/rails.png"><h3>CSS3</h3></li>
-										<li><img src="http://www.deanhu.com/images/rails.png"><h3>Git</h3></li>
+						        <li><img src="../../public/images/ruby.png"><h3>Ruby</h3></li>
+						        <li><img src="../../public/images/rails.png"><h3>Rails</h3></li>
+						        <li><img src="../../public/images/javascript.png"><h3>JavaScript</h3></li>
+						        <li><img src="../../public/images/react.png"><h3>React</h3></li>
+						        <li><img src="../../public/images/flux.png"><h3>Flux</h3></li>
+										<li><img src="../../public/images/jquery.png"><h3>jQuery</h3></li>
+										<li><img src="../../public/images/postgresql.png"><h3>PostgreSQL</h3></li>
+										<li><img src="../../public/images/html.png"><h3>HTML5</h3></li>
+										<li><img src="../../public/images/css.png"><h3>CSS3</h3></li>
+										<li><img src="../../public/images/git.png"><h3>Git</h3></li>
 						      </ul>
 								</section>
 							</div>
