uses formspree to send emails from form

--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -152,7 +152,8 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="MAILTO:jesse.posner@gmail.com" enctype="text/plain">
+									<form method="post"
+												action="https://formspree.io/jesse.posner@gmail.com">
 										<div class="field half first">
 											<label for="name">Name</label>
 											<input type="text" name="name" id="name" />
