adds content to projects sectoin

--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -49,39 +49,45 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="../../public/images/launchpad.png" alt="" data-position="center center" /></a>
+							<a href="http://lapad.herokuapp.com/" class="image">
+								<img src="../../public/images/launchpad.png" alt="LaunchPad" />
+							</a>
 							<div class="content">
 								<div class="inner">
 									<h2>LaunchPad</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>LaunchPad is a full-stack web application inspired by KickStarter, but with a twist: backers receive equity shares for their financing contributions.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Live</a></li>
-										<li><a href="#" class="button">Github</a></li>
+										<li><a href="http://lapad.herokuapp.com/" class="button">Live</a></li>
+										<li><a href="https://github.com/jesseposner/LaunchPad" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="../../public/images/spaceinvaders.png" alt="" data-position="top center" /></a>
+							<a href="http://jesseposner.github.io/" class="image">
+								<img src="../../public/images/spaceinvaders.png" alt="Space Invaders" />
+							</a>
 							<div class="content">
 								<div class="inner">
 									<h2>Space Invaders</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Browser-based game inspired by Space Invaders.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Live</a></li>
-										<li><a href="#" class="button">Github</a></li>
+										<li><a href="http://jesseposner.github.io/" class="button">Live</a></li>
+										<li><a href="https://github.com/jesseposner/Space-Invaders" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="../../public/images/railslite.png" alt="" data-position="25% 25%" /></a>
+							<div class="image">
+								<img src="../../public/images/railslite.png" alt="Rails Lite" />
+							</div>
 							<div class="content">
 								<div class="inner">
 									<h2>Rails Lite</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Rails Lite is a web application framework inspired by Ruby on Rails. This portfolio site is built on Rails Lite. </p>
 									<ul class="actions">
-										<li><a href="#" class="button">Github</a></li>
+										<li><a href="https://github.com/jesseposner/Rails-Lite" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
@@ -175,7 +181,9 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="#">jesse.posner@gmail.com</a>
+											<a href="mailto:jesse.posner@gmail.com">
+												jesse.posner@gmail.com
+											</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
@@ -184,9 +192,24 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://twitter.com/jesseposner" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="https://github.com/jesseposner" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/jesseposner" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li>
+													<a href="https://twitter.com/jesseposner"
+														 class="fa-twitter">
+														<span class="label">Twitter</span>
+													</a>
+												</li>
+												<li>
+													<a href="https://github.com/jesseposner"
+													   class="fa-github">
+														<span class="label">GitHub</span>
+													</a>
+												</li>
+												<li>
+													<a href="https://www.linkedin.com/in/jesseposner"
+													   class="fa-linkedin">
+														<span class="label">LinkedIn</span>
+													</a>
+												</li>
 											</ul>
 										</li>
 									</ul>
