adds content to 'who am i' section

--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -98,32 +98,34 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Who am I</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>
+								I’m a passionate software developer with experience in numerous technologies including, Ruby, JavaScript, SQL, HTML, and CSS.
+							</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>I'm a thinker and builder.</h3>
+									<p>I've conceived and executed complex projects, such as LaunchPad, a single-page web application, with a Rails back-end and React front-end, that facilitates easy startup investments and accepts payments with credit card or bitcoin via Stripe.js integration.</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>I'm a fast learner.</h3>
+									<p>I have a track-record of repeatedly mastering new programming languages, having quickly taught myself Ruby, and excelling at one of the most competitive and challenging coding schools, App Academy.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>I'm a problem solver and researcher.</h3>
+									<p>When I hit a bug or an unfamiliar technical concept, I relentlessly drive towards a solution without requiring outside direction.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>I have extensive experience working with startups.</h3>
+									<p>I’m intimately familiar with the strategies and risks that confront a startup, and have advised over 30 technology startups, including 3 Y-Combinator backed startups, as a corporate attorney, on a wide-range of issues such as intellectual property, financing, and terms of service.</p>
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>I'm a leader and collaborator.</h3>
+									<p>Founding and growing my own legal practice taught me valuable leadership and entrepreneurial skills, as well as the collaborative and inter-personal abilities that were necessary to acquire and maintain clients.</p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
