--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -49,7 +49,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="http://lapad.herokuapp.com/" class="image">
+							<a href="http://www.laupad.com/" class="image">
 								<img src="../../public/images/launchpad.png" alt="LaunchPad" />
 							</a>
 							<div class="content">
@@ -57,14 +57,14 @@
 									<h2>LaunchPad</h2>
 									<p>LaunchPad is a full-stack web application inspired by KickStarter, but with a twist: backers receive equity shares for their financing contributions.</p>
 									<ul class="actions">
-										<li><a href="http://lapad.herokuapp.com/" class="button">Live</a></li>
+										<li><a href="http://www.laupad.com/" class="button">Live</a></li>
 										<li><a href="https://github.com/jesseposner/LaunchPad" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="http://jesseposner.github.io/" class="image">
+							<a href="http://www.galaxyinvaders.space/" class="image">
 								<img src="../../public/images/spaceinvaders.png" alt="Space Invaders" />
 							</a>
 							<div class="content">
@@ -72,8 +72,8 @@
 									<h2>Space Invaders</h2>
 									<p>Browser-based game inspired by Space Invaders.</p>
 									<ul class="actions">
-										<li><a href="http://jesseposner.github.io/" class="button">Live</a></li>
-										<li><a href="https://github.com/jesseposner/Space-Invaders" class="button">Github</a></li>
+										<li><a href="http://www.galaxyinvaders.space/" class="button">Live</a></li>
+										<li><a href="https://github.com/jesseposner/jesseposner.github.io" class="button">Github</a></li>
 									</ul>
 								</div>
 							</div>
@@ -105,32 +105,32 @@
 								<section>
 									<span class="icon major fa-code"></span>
 									<h3>I'm a thinker and builder.</h3>
-									<p>I've conceived and executed complex projects, such as LaunchPad, a single-page web application, with a Rails back-end and React front-end, that facilitates easy startup investments and accepts payments with credit card or bitcoin via Stripe.js integration.</p>
+									<p>I've conceived and executed compelling software projects, such as LaunchPad, a single-page web application, with a Rails back-end and React front-end, that facilitates easy startup investments and accepts payments with credit card or bitcoin via Stripe.js integration.</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-desktop"></span>
 									<h3>I'm a fast learner.</h3>
-									<p>I have a track-record of repeatedly mastering new programming languages, having quickly taught myself Ruby, and excelling at one of the most competitive and challenging coding schools, App Academy.</p>
+									<p>I have a track-record of repeatedly mastering new programming languages, having quickly taught myself Ruby and JavaScript, and excelling at App Academy, one of the most challenging coding schools.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
 									<h3>I'm a problem solver and researcher.</h3>
-									<p>When I hit a bug or an unfamiliar technical concept, I relentlessly drive towards a solution without requiring outside direction.</p>
+									<p> I’m a rigorous debugger who relentlessly drives towards solutions without requiring outside direction. I have an insatiable curiosity that inspires me to continuously investigate and discover.</p>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
+									<span class="icon major fa-lock"></span>
 									<h3>I have extensive experience working with startups.</h3>
 									<p>I’m intimately familiar with the strategies and risks that confront a startup, and have advised over 30 technology startups, including 3 Y-Combinator backed startups, as a corporate attorney, on a wide-range of issues such as intellectual property, financing, and terms of service.</p>
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
 									<h3>I'm a leader and collaborator.</h3>
-									<p>Founding and growing my own legal practice taught me valuable leadership and entrepreneurial skills, as well as the collaborative and inter-personal abilities that were necessary to acquire and maintain clients.</p>
+									<p>Founding and growing my own legal practice taught me valuable leadership skills, as well as the collaborative abilities that were necessary to acquire and maintain client relationships.</p>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>I'm a creative thinker.</h3>
+									<p>I invented and prototyped a web application that dramatically reduces the cost of authenticating emails by hashing and time-stamping proof-of-delivery in the Bitcoin blockchain.</p>
 								</section>
 							</div>
 							<div class="features">
@@ -157,7 +157,6 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
 									<form method="post"
