fixes game title

--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -69,7 +69,7 @@
 							</a>
 							<div class="content">
 								<div class="inner">
-									<h2>Space Invaders</h2>
+									<h2>Galaxy Invaders</h2>
 									<p>Browser-based game inspired by Space Invaders.</p>
 									<ul class="actions">
 										<li><a href="http://www.galaxyinvaders.space/" class="button">Live</a></li>
