minor revision to content

--- a/views/controller/index.html.erb
+++ b/views/controller/index.html.erb
@@ -104,7 +104,7 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>I'm a thinker and builder.</h3>
+									<h3>I'm a detail-oriented builder.</h3>
 									<p>I've conceived and executed compelling software projects, such as LaunchPad, a single-page web application, with a Rails back-end and React front-end, that facilitates easy startup investments and accepts payments with credit card or bitcoin via Stripe.js integration.</p>
 								</section>
 								<section>
